--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
 			"email": "typo3cms@typo3.org",
 			"role": "Developer"
 		}],
-
 	"require": {
 		"typo3/cms-core": ">=9.0.0 <=9.0.99"
 	},
@@ -17,7 +16,9 @@
 		"typo3/cms": "*"
 	},
 	"replace": {
-		"documentation": "*"
+		"documentation": "*",
+		"csh_manual": "*",
+		"typo3/cms-cshmanual": "*"
 	},
 	"extra": {
 		"branch-alias": {
@@ -25,9 +26,15 @@
 		},
 		"typo3/cms": {
 			"Package": {
-				"partOfFactoryDefault": true
+				"partOfFactoryDefault": true,
+				"partOfMinimalUsableSystem": true
 			},
 			"extension-key": "documentation"
+		},
+		"typo3/class-alias-loader": {
+			"class-alias-maps": [
+				"Migrations/Code/ClassAliasMap.php"
+			]
 		}
 	},
 	"autoload": {
