--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
 		"documentation": "*"
 	},
 	"extra": {
+		"branch-alias": {
+			"dev-master": "9.x-dev"
+		},
 		"typo3/cms": {
 			"Package": {
 				"partOfFactoryDefault": true
