--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
 	"name": "typo3/cms-documentation",
 	"type": "typo3-cms-framework",
-	"description": "TYPO3 Core",
+	"description": "Backend module for TYPO3 to list and show documentation of loaded extensions as well as custom documents.",
 	"homepage": "https://typo3.org",
 	"license": ["GPL-2.0+"],
+	"authors": [{
+			"name": "TYPO3 Core Team",
+			"email": "typo3cms@typo3.org",
+			"role": "Developer"
+		}],
 
 	"require": {
-		"typo3/cms-core": "*"
+		"typo3/cms-core": ">=9.0.0 <=9.0.99"
 	},
 	"conflict": {
 		"typo3/cms": "*"
@@ -21,7 +26,8 @@
 		"typo3/cms": {
 			"Package": {
 				"partOfFactoryDefault": true
-			}
+			},
+			"extension-key": "documentation"
 		}
 	},
 	"autoload": {
