--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 			"role": "Developer"
 		}],
 	"require": {
-		"typo3/cms-core": ">=9.0.0 <=9.0.99"
+		"typo3/cms-core": "9.0.0"
 	},
 	"conflict": {
 		"typo3/cms": "*"
