--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 			"role": "Developer"
 		}],
 	"require": {
-		"typo3/cms-core": "9.1.0"
+		"typo3/cms-core": "9.1.*@dev"
 	},
 	"conflict": {
 		"typo3/cms": "*"
